--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.1",
+    "@rainbow-me/rainbowkit": "^0.4.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -19,7 +20,9 @@
     "ipfs-http-client": "^57.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "wagmi": "^0.5.11",
     "web-vitals": "^2.1.0",
     "web3modal": "^1.9.8"
   },
