--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.1",
     "@rainbow-me/rainbowkit": "^0.4.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/mocha": "^9.1.0",
     "antd": "^4.21.7",
     "axios": "^0.27.2",
     "chai": "^4.3.6",
@@ -17,11 +22,14 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.1",
+    "hardhat-gas-reporter": "^1.0.8",
     "ipfs-http-client": "^57.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "solidity-coverage": "^0.7.21",
+    "ts-node": ">=8.0.0",
     "wagmi": "^0.5.11",
     "web-vitals": "^2.1.0",
     "web3modal": "^1.9.8"
